add heading block elements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <title>Michael's favorite things</title>
 </head>
 <body>
+  <h1>My first web page</h1>
+  <h2>Written with the guidance of Epicodus</h2>
+
+  <p>This is my first web page!</p>
+  <p>Isn't it nice?</p>
   <h1>My favorite things</h1>
   <h2>These are a few of my favorite things.</h2>
 
